Fix search page content significantly jumping again
We needed to update this multiple times already. Basically with every
OOUI update. The latest significant updates have been Ia09a306 and
Ifdf1e7b.

It seems OOUI changed again since then.

I tested this patch in both Chrome and Firefox, both running MediaWiki
1.33.0-wmf.4 with oojs/oojs-ui 0.29.5.

Bug: T210625

--- a/modules/ext.advancedSearch.init.less
+++ b/modules/ext.advancedSearch.init.less
@@ -11,7 +11,7 @@
 
 .client-js {
 	.mw-search-form-wrapper {
-		min-height: 190px;
+		min-height: 211px;
 	}
 
 	/* stylelint-disable-next-line selector-max-id */
